# Apratim_Solution_SOI_Cartographer

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
Apratim_Solution/: __init__.py  controller.py  coordinator.py  frontier.py  main.py  mapper.py  merger.py  occupancy_grid.py  parameters.py  planner.py  robot_state.py  solution_node.py  utilities.py  visualization.py
Apratim_Solution/algorithms/: __init__.py  astar.py  filters.py  hungarian.py  icp.py  occupancy_grid.py
config/: communication.yaml  exploration.yaml  mapping.yaml  navigation.yaml  parameters.yaml
launch/: solution.launch.py
